# ldrd_neat_ml

./: .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  CITATION.cff  LICENSE  README.md  debug.py  lib.py  main.py  main_image_analysis.py  mypy.ini  pyproject.toml  requirements.txt  ruff.toml  run_workflow.py
.github/workflows/: ci.yml
data/: mihee_peo_dextran_phase_map_experimental.xlsx
neat_ml/: __init__.py  figure_utils.py  lib.py  plot_manuscript_figures.py
neat_ml/analysis/: data_analysis.py
neat_ml/bubblesam/: SAM.py  bubblesam.py
neat_ml/data/: AA-PHASE-DESCRIPTORS.xlsx  CG-PHASE-DESCRIPTORS.xlsx  Hypothetical_ternary_phase_map.xlsx  bubblesam_detection_test.yaml  mathematical_model_parameters.json  opencv_analysis_test.yaml  opencv_detection_test.yaml
neat_ml/data/Binary_Mixture_Phase_Information/: PEO10K_DEX10K_Composition.csv  PEO10K_DEX10K_Composition_Phase.csv  PEO20K_DEX500K_Composition.csv  PEO20K_DEX500K_Composition_Phase.csv  PEO8K_Sodium_Citrate_Composition.csv
neat_ml/data/figure_data/Binodal_Comparison_Figures/: PEO10K_DEX10K_TECAN.csv  PEO10K_DEX10K_TECAN_1st.csv  PEO10K_DEX10K_TECAN_2nd.csv  PEO10K_DEX10K_Titrate.csv  PEO20K_DEX500K_TECAN.csv  PEO20K_DEX500K_TECAN_1st.csv  PEO20K_DEX500K_TECAN_2nd.csv  PEO20K_DEX500K_Titrate.csv  PEO8K_Sod_TECAN_1st.csv  PEO8K_Sod_TECAN_2nd.csv  PEO8K_Sod_Titrate.csv
neat_ml/data/figure_data/Titration_Figures/: Figure_3_PEO10K_DEX10K.csv  Figure_3_PEO20K_DEX500K.csv  Figure_3_PEO8k_Sodium_Citrate.csv
neat_ml/misc/: debug.py
neat_ml/model/: feature_importance.py  inference.py  train.py
neat_ml/opencv/: detection.py  preprocessing.py
neat_ml/phase_diagram/: plot_phase_diagram.py
neat_ml/sample_scripts/: ternary_examples.py
neat_ml/tests/: conftest.py  test_analysis.py  test_bubblesam.py  test_detection.py  test_feat_importance.py  test_feature_importance.py  test_inference.py  test_lib.py  test_phase_diagram.py  test_plotting.py  test_preprocessing.py  test_ternary.py  test_train.py  test_utils_module.py  test_workflow.py
neat_ml/tests/baseline/: feature_importance_comparison.csv  feature_importance_comparison_expected.csv
neat_ml/tests/data/images/: raw.tiff
neat_ml/tests/data/images_Processed/: raw.tiff
neat_ml/utils/: figure_utils.py  lib_plotting.py  utils.py
neat_ml/workflow/: lib_workflow.py
tests/: test_feat_importance.py  test_lib.py  test_ternary.py
