[build-system]
requires = ["setuptools>=68.2.2",
            "setuptools-scm>=8.0.2"]

[project]
name = "neat_ml"
version = "0.0.1.dev0"
dependencies = [
    'numpy>=1.26.3,<=2.1.3', # >2.1.3 causes mypy complaints for neat_ml.lib module (see issue #38)
    'matplotlib>=3.10.0,<3.11.0', # backwards incompatibility with for image comparison tests (see issue #36). python3.14 not compatible with matplotlib<3.10.0
    'xgboost>=2.1.4', # <=2.1.3 causes errors with version of scikit-learn > 1.5.0 
    'pandas>=2.2.2',
    'scikit-learn>1.5.0',
    'openpyxl>=3.1.2',
    'jinja2>=3.1.2',
    'python-ternary==1.0.8',
    'shap>=0.47.0', # for use of `rng` with `summary_plot`
    'interpret>=0.7.0',
    'scikit-image>=0.25.0',
    'lightgbm>=4.1.0',
    'lime==0.2.0.1',
    'opencv-python-headless==4.10.0.84',
    'scipy>=1.15.0,!=1.17.0', # scipy==0.17.0 includes bug affecting lime explainer outputs
    'pyyaml>=6.0.2',
    'pooch>=1.9.0',
    'pyarrow>=23.0.1',
    'fastparquet>=2025.12.0',
    'torch>=2.5.1', # inline with sam-2 requirements
    'torchvision>=0.21.1', # inline with sam-2 requirements
    'huggingface_hub>=1.4.1',
    'sam-2 @ git+https://github.com/facebookresearch/sam2@2b90b9f5ceec907a1c18123530e92e794ad901a4',
    'networkx>=3.4.0',
]
[project.optional-dependencies]
dev = ['mypy>=1.18.1',
       'ruff>=0.14.1',
       'pandas-stubs',
       'pytest>=8.4.2',
       'pytest-xdist',
       'pytest-cov',
       'types-tqdm',
       'types-Pillow',
       'types-pyyaml',
       'pyarrow-stubs',
]
[tool.setuptools.package-data]
"neat_ml.data" = ["*.xlsx"]
"neat_ml.tests.baseline" = ["*.png"]
